Update to JDK21