@@ -54,9 +54,9 @@ class CreateImportedBalanceTest extends AbstractImportUserControllerTest {
 						Arrays.asList(new CapitalsourceID(CapitalsourceTransportBuilder.CAPITALSOURCE1_ID)));
 		Assertions.assertNotNull(importedBalances);
 		Assertions.assertEquals(1, importedBalances.size());
-		Assertions.assertEquals(0, transport.getBalance().compareTo(importedBalances.get(0).getBalance()));
+		Assertions.assertEquals(0, transport.getBalance().compareTo(importedBalances.getFirst().getBalance()));
 		Assertions.assertEquals(CapitalsourceTransportBuilder.CAPITALSOURCE1_ID,
-				importedBalances.get(0).getCapitalsource().getId().getId());
+				importedBalances.getFirst().getCapitalsource().getId().getId());
 	}
 
 	@Test
@@ -81,9 +81,9 @@ class CreateImportedBalanceTest extends AbstractImportUserControllerTest {
 				.getAllImportedBalancesByCapitalsourceIds(userId, Arrays.asList(capitalsourceId));
 		Assertions.assertNotNull(importedBalances);
 		Assertions.assertEquals(1, importedBalances.size());
-		Assertions.assertEquals(0, BigDecimal.TEN.compareTo(importedBalances.get(0).getBalance()));
+		Assertions.assertEquals(0, BigDecimal.TEN.compareTo(importedBalances.getFirst().getBalance()));
 		Assertions.assertEquals(CapitalsourceTransportBuilder.CAPITALSOURCE4_ID,
-				importedBalances.get(0).getCapitalsource().getId().getId());
+				importedBalances.getFirst().getCapitalsource().getId().getId());
 	}
 
 	@Test
@@ -101,9 +101,9 @@ class CreateImportedBalanceTest extends AbstractImportUserControllerTest {
 						Arrays.asList(new CapitalsourceID(CapitalsourceTransportBuilder.CAPITALSOURCE5_ID)));
 		Assertions.assertNotNull(importedBalances);
 		Assertions.assertEquals(1, importedBalances.size());
-		Assertions.assertEquals(0, transport.getBalance().compareTo(importedBalances.get(0).getBalance()));
+		Assertions.assertEquals(0, transport.getBalance().compareTo(importedBalances.getFirst().getBalance()));
 		Assertions.assertEquals(CapitalsourceTransportBuilder.CAPITALSOURCE5_ID,
-				importedBalances.get(0).getCapitalsource().getId().getId());
+				importedBalances.getFirst().getCapitalsource().getId().getId());
 	}
 
 	@Test
